--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -920,3 +920,7 @@ a {
     .order-item__toggle--active {
       -webkit-transform: rotate(180deg);
               transform: rotate(180deg); }
+
+.alert-error{
+  color: #ff4040
+}
